--- a/_config.yml
+++ b/_config.yml
@@ -1,4 +1,4 @@
 theme: jekyll-theme-minimal
-title: Welcome to Ponderer's Nook
-description: This is place where I muse.
-permalink: /projects.md/
+title: Ponderer's Nook
+description: My place for musing.
+permalink: /Home/
