--- a/_config.yml
+++ b/_config.yml
@@ -1,6 +1,4 @@
-#theme: jekyll-theme-minimal
-github:
-  url: "https://chrisanthropic.github.io/starving-artist-jekyll-theme"
+theme: jekyll-theme-minimal
 title: Ponderer's Nook
 author: Sakshi Shrivastava
 description: My place for musing.
