--- a/_data/socials.yml
+++ b/_data/socials.yml
@@ -1,5 +1,5 @@
 - title: "linkedin"
-  href: "https://www.linkedin.com/in/sakshi163/"
+  href: "www.linkedin.com/in/sakshi163/"
   
-  - title: "github"
-  href: "https://github.com/ponderersnook"
+- title: "github"
+  href: "github.com/ponderersnook"
