--- a/_config.yml
+++ b/_config.yml
@@ -1,4 +1,4 @@
-#theme: jekyll-theme-minimal
+theme: jekyll-theme-minimal
 title: Ponderer's Nook
 author: Sakshi Shrivastava
 description: My place for musing.
