--- a/_data/socials.yml
+++ b/_data/socials.yml
@@ -14,11 +14,11 @@ github:
 instagram:
   id: '_ponderersnook'
   href: 'https://www.instagram.com/'
-  title: 'GitHub'
+  title: 'Instagram'
   fa-icon: 'fa-instagram-square'
   
   medium:
   id: 'ponderersnook'
   href: 'https://ponderersnook.medium.com/'
-  title: 'GitHub'
+  title: 'Medium'
   fa-icon: 'fa-medium-square'
